--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
     "file-saver": "^2.0.5",
+    "firebase": "^8.9.0",
+    "firebase-admin": "^9.11.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "html2canvas": "^1.0.0-rc.7",
@@ -55,6 +57,7 @@
     "jest-watch-typeahead": "0.6.1",
     "mdbreact": "^5.1.0",
     "mini-css-extract-plugin": "0.11.3",
+    "moment": "^2.29.1",
     "moralis": "0.0.25",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "particles.js": "^2.0.0",
@@ -74,6 +77,7 @@
     "react-dom": "^17.0.2",
     "react-gradient-text": "^0.1.0",
     "react-icons": "^4.2.0",
+    "react-medium-widget": "^1.0.0",
     "react-moralis": "^0.1.9",
     "react-parallax": "^3.3.0",
     "react-particles-js": "^3.4.1",
@@ -82,13 +86,16 @@
     "react-responsive-decorator": "0.0.1",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
+    "react-twitter-embed": "^3.0.3",
     "react-vanilla-tilt": "^1.0.0",
     "reactstrap": "^8.9.0",
+    "request": "latest",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "serve": "^12.0.0",
+    "shards-react": "^1.0.3",
     "style-loader": "1.3.0",
     "styled-components": "^5.3.0",
     "terser-webpack-plugin": "4.2.3",
@@ -129,7 +136,9 @@
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "cordova-android": "^9.1.0",
     "cordova-ios": "^6.2.0",
-    "file-saver": "^2.0.5"
+    "file-saver": "^2.0.5",
+    "firebase-functions": "^3.14.1",
+    "react-router-dom": "^5.2.0"
   },
   "jest": {
     "roots": [
